fixed gallery on small screens

--- a/HM4/css/style.css
+++ b/HM4/css/style.css
@@ -114,6 +114,7 @@ main .gallery {
   padding: 0 45px 45px; }
   main .gallery .gallery-wraper {
     display: flex;
+    flex-wrap: wrap;
     justify-content: space-between; }
     main .gallery .gallery-wraper .gallery-item {
       padding: 45px 35px 65px;
